home.css
/* ... */
@media (max-width: 440px) {
    .project__info {
        top:2rem
    }
}

@media (max-width: 400px) {
    .project__info {
        top:0
    }
}

.project__title {
    position: relative;
    z-index: 66;
    font-size: 3.5rem
}

@media (max-width: 900px) {
    .project__title {
        font-size:3rem
    }
}

@media (max-width: 820px) {
    .project__title {
        font-size:2.7rem
    }
}

@media (max-width: 550px) {
    .project__title {
        font-size:2.5rem
    }
}

@media (max-width: 400px) {
    .project__title {
        font-size:2.2rem
    }
}

.project__description {
    position: relative;
    margin-top: 3rem;
    font-size: 1.8rem;
    font-weight: 500;
    z-index: 999909999
}

@media (max-width: 560px) {
    .project__description {
        margin-top:2rem
    }
}

.project__live-2 {
    font-size: 1.6rem;
    font-weight: 700;
    letter-spacing: 3px;
    line-height: 1;
    text-transform: uppercase;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: fit-content;
    padding: 1rem 1.2rem;
    position: relative;
    margin-top: 3rem;
    cursor: pointer
}

@media (max-width: 560px) {
    .project__live-2 {
        margin-top:2rem
    }
}

.project__live-2:after {
    position: absolute;
    content: '';
    height: 2px;
    background-color: #4b9467;
    width: 100%;
    bottom: 1px;
    display: block;
    transform-origin: bottom;
    transition: all 0.25s;
    z-index: -1
}

.project__live-2:hover {
    color: #1a1a1a
}

.project__live-2:hover:after {
    height: 100%
}

.project__live,.project__code {
    position: relative;
    margin-top: 3rem;
    padding: 0.6rem 1rem;
    width: fit-content;
    font-size: 1.6rem;
    text-transform: uppercase;
    font-weight: 700;
    letter-spacing: 3px;
    z-index: 9;
    transition: all 0.2s;
    cursor: pointer
}

@media (max-width: 560px) {
    .project__live,.project__code {
        margin-top:2rem
    }
}

.project__live:hover,.project__code:hover {
    color: #1a1a1a;
    font-weight: 700
}

.project__live:after,.project__code:after {
    position: absolute;
    content: '';
    border-bottom: 2px solid #4b9467;
    width: calc(100% + 2rem);
    left: -10%;
    top: 0.5rem;
    display: block;
    margin: 0 auto;
    position: relative;
    transform-origin: bottom;
    transition: all 0.2s;
    z-index: -1
}

.project__live:hover:after,.project__code:hover:after {
    transform: scaleY(17.5)
}

@media (max-width: 1500px) {
    .project__live:hover:after,.project__code:hover:after {
        transform:scaleY(16.5)
    }
}

@media (max-width: 1200px) {
    .project__live:hover:after,.project__code:hover:after {
        transform:scaleY(14)
    }
}

@media (max-width: 770px) {
    .project__live:hover:after,.project__code:hover:after {
        transform:scaleY(12.5)
    }
}

.project__code:after {
    width: calc(100% + 2rem);
    left: -8%
}

.project-left {
    align-self: flex-start;
    margin-left: 22rem
}

@media (max-width: 1700px) {
    .project-left {
        margin-left:11rem
    }
}

@media (max-width: 1500px) {
    .project-left {
        margin-left:0
    }
}

.project-left .project__info {
    left: -8rem;
    margin-right: -2rem
}

@media (max-width: 800px) {
    .project-left .project__info {
        margin-right:-4rem
    }
}

@media (max-width: 770px) {
    .project-left .project__info {
        margin-right:-4rem
    }
}

@media (max-width: 600px) {
    .project-left .project__info {
        margin-right:-6rem
    }
}

@media (max-width: 440px) {
    .project-left .project__info {
        left:-10rem;
        margin-right: -7rem
    }
}

.project-right {
    align-self: flex-end;
    margin-right: 22rem
}

@media (max-width: 1700px) {
    .project-right {
        margin-right:11rem
    }
}

@media (max-width: 1500px) {
    .project-right {
        margin-right:0
    }
}

.project-right .project__info {
    right: -8rem;
    margin-left: -2rem
}

@media (max-width: 770px) {
    .project-right .project__info {
        margin-left:-4rem
    }
}

@media (max-width: 600px) {
    .project-right .project__info {
        margin-left:-6rem
    }
}

@media (max-width: 440px) {
    .project-right .project__info {
        right:-10rem;
        margin-left: -7rem
    }
}

.retro {
    display: flex;
    align-items: flex-end;
    justify-content: center
}

.retro img {
    margin-bottom: -3px
}

.todo {
    display: flex;
    align-items: center;
    justify-content: flex-end
}

.weather {
    display: flex;
    align-items: center;
    justify-content: flex-start
}

.section-heading {
    position: relative;
    font-size: 4.5rem;
    font-weight: 400;
    margin-top: 9rem;
    margin-bottom: 13rem;
    z-index: 9999
}

@media (max-width: 1200px) {
    .section-heading {
        margin-bottom:10rem
    }
}

@media (max-width: 1000px) {
    .section-heading {
        margin-top:6rem
    }
}

